add viewer kubeconfig
